// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Lexer Comments code with # 1`] = `
Array [
  Array [
    1,
    "
      before",
    0,
    13,
  ],
  Array [
    5,
    "<%=",
    13,
    16,
  ],
  Array [
    11,
    " ",
    16,
    17,
  ],
  Array [
    10,
    "#",
    17,
    18,
  ],
  Array [
    11,
    " ",
    18,
    19,
  ],
  Array [
    14,
    "no",
    19,
    21,
  ],
  Array [
    11,
    " ",
    21,
    22,
  ],
  Array [
    14,
    "data",
    22,
    26,
  ],
  Array [
    11,
    " ",
    26,
    27,
  ],
  Array [
    3,
    "%>",
    27,
    29,
  ],
  Array [
    1,
    "after
      ",
    29,
    42,
  ],
  Array [
    0,
    null,
    42,
    43,
  ],
]
`;

exports[`Lexer Comments code with /* 1`] = `
Array [
  Array [
    1,
    "
      before",
    0,
    13,
  ],
  Array [
    5,
    "<%=",
    13,
    16,
  ],
  Array [
    11,
    " ",
    16,
    17,
  ],
  Array [
    13,
    "/* ok */",
    17,
    25,
  ],
  Array [
    11,
    " ",
    25,
    26,
  ],
  Array [
    14,
    "data",
    26,
    30,
  ],
  Array [
    11,
    " ",
    30,
    31,
  ],
  Array [
    3,
    "%>",
    31,
    33,
  ],
  Array [
    1,
    "after
      ",
    33,
    46,
  ],
  Array [
    0,
    null,
    46,
    47,
  ],
]
`;

exports[`Lexer Comments code with // 1`] = `
Array [
  Array [
    1,
    "
      before",
    0,
    13,
  ],
  Array [
    5,
    "<%=",
    13,
    16,
  ],
  Array [
    11,
    " ",
    16,
    17,
  ],
  Array [
    10,
    "//",
    17,
    19,
  ],
  Array [
    11,
    " ",
    19,
    20,
  ],
  Array [
    14,
    "no",
    20,
    22,
  ],
  Array [
    11,
    " ",
    22,
    23,
  ],
  Array [
    14,
    "data",
    23,
    27,
  ],
  Array [
    11,
    " ",
    27,
    28,
  ],
  Array [
    3,
    "%>",
    28,
    30,
  ],
  Array [
    1,
    "after
      ",
    30,
    43,
  ],
  Array [
    0,
    null,
    43,
    44,
  ],
]
`;

exports[`Lexer Comments injection 1`] = `
Array [
  Array [
    1,
    "
      before",
    0,
    13,
  ],
  Array [
    4,
    "<%# comment /* should break */ data %>",
    13,
    51,
  ],
  Array [
    1,
    "after
      ",
    51,
    64,
  ],
  Array [
    0,
    null,
    64,
    65,
  ],
]
`;

exports[`Lexer Comments simple 1`] = `
Array [
  Array [
    1,
    "
      before",
    0,
    13,
  ],
  Array [
    4,
    "<%# comment %>",
    13,
    27,
  ],
  Array [
    1,
    "after
      ",
    27,
    40,
  ],
  Array [
    0,
    null,
    40,
    41,
  ],
]
`;

exports[`Lexer Simple case 1`] = `
Array [
  Array [
    1,
    "
    <foo><%% 
    ",
    0,
    19,
  ],
  Array [
    4,
    "<%# comment %>",
    19,
    33,
  ],
  Array [
    1,
    "
    ",
    33,
    38,
  ],
  Array [
    7,
    "<%_",
    38,
    41,
  ],
  Array [
    11,
    " ",
    41,
    42,
  ],
  Array [
    14,
    "if",
    42,
    44,
  ],
  Array [
    11,
    " ",
    44,
    45,
  ],
  Array [
    17,
    "(",
    45,
    46,
  ],
  Array [
    14,
    "foo",
    46,
    49,
  ],
  Array [
    11,
    " ",
    49,
    50,
  ],
  Array [
    10,
    "=",
    50,
    51,
  ],
  Array [
    10,
    "=",
    51,
    52,
  ],
  Array [
    11,
    " ",
    52,
    53,
  ],
  Array [
    12,
    "\\"%>\\\\\\"%>\\"",
    53,
    61,
  ],
  Array [
    18,
    ")",
    61,
    62,
  ],
  Array [
    11,
    " ",
    62,
    63,
  ],
  Array [
    15,
    "{",
    63,
    64,
  ],
  Array [
    11,
    " ",
    64,
    65,
  ],
  Array [
    9,
    "_%>",
    65,
    68,
  ],
  Array [
    1,
    "
      ",
    68,
    75,
  ],
  Array [
    5,
    "<%=",
    75,
    78,
  ],
  Array [
    11,
    " ",
    78,
    79,
  ],
  Array [
    14,
    "bar",
    79,
    82,
  ],
  Array [
    11,
    " ",
    82,
    83,
  ],
  Array [
    3,
    "%>",
    83,
    85,
  ],
  Array [
    1,
    "
    ",
    85,
    90,
  ],
  Array [
    2,
    "<%",
    90,
    92,
  ],
  Array [
    11,
    " ",
    92,
    93,
  ],
  Array [
    16,
    "}",
    93,
    94,
  ],
  Array [
    11,
    " ",
    94,
    95,
  ],
  Array [
    3,
    "%>",
    95,
    97,
  ],
  Array [
    1,
    "
    </foo>
    ",
    97,
    114,
  ],
  Array [
    0,
    null,
    114,
    115,
  ],
]
`;
